added localized messages

--- a/grails-app/i18n/i18n-templates.properties
+++ b/grails-app/i18n/i18n-templates.properties
@@ -4,3 +4,24 @@ edit=Edit
 update=Update
 delete=Delete
 delete.confirm=Are you sure?
+
+
+event.create=Create Event
+event.edit=Edit Event
+event.list=Event List
+event.new=New Event
+event.show=Show Event
+event.created=Event {0} created
+event.updated=Event {0} updated
+event.deleted=Event {0} deleted
+event.not.found=Event not found with id {0}
+event.id=Id
+event.subject=Subject
+event.type=Type
+event.startTime=Start Time
+event.endTime=End Time
+event.allDay=All Day
+event.location=Location
+event.necessaryRegistry=Necessary Registry
+
+
