improved domain class Event

--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -5,6 +5,7 @@ update=Actualizar
 delete=Borrar
 delete.confirm=¿Estas seguro?
 
+
 event.create=Nuevo Evento
 event.edit=Modificar Evento
 event.list=Todos los Eventos
@@ -15,8 +16,8 @@ event.updated=Evento {0} actualizado
 event.deleted=Evento {0} borrado
 event.not.found=No se encontro evento con id {0}
 event.id=Id
-event.subject=Evento
-event.type=Tipo
+event.name=Evento
+event.description=Descripción
 event.startTime=Fecha de inicio
 event.endTime=Fecha de termino
 event.allDay=Todo el día
