--- a/grails-app/i18n/i18n-templates.properties
+++ b/grails-app/i18n/i18n-templates.properties
@@ -5,7 +5,7 @@ update=Update
 delete=Delete
 delete.confirm=Are you sure?
 
-
+# Event messages
 event.create=Create Event
 event.edit=Edit Event
 event.list=Event List
@@ -16,12 +16,10 @@ event.updated=Event {0} updated
 event.deleted=Event {0} deleted
 event.not.found=Event not found with id {0}
 event.id=Id
-event.subject=Subject
-event.type=Type
+event.name=Name
+event.description=Description
 event.startTime=Start Time
 event.endTime=End Time
 event.allDay=All Day
 event.location=Location
 event.necessaryRegistry=Necessary Registry
-
-
