--- a/grails-app/i18n/i18n-templates.properties
+++ b/grails-app/i18n/i18n-templates.properties
@@ -23,3 +23,40 @@ event.endTime=End Time
 event.allDay=All Day
 event.location=Location
 event.necessaryRegistry=Necessary Registry
+
+# Speaker messages
+speaker.create=Create Speaker
+speaker.edit=Edit Speaker
+speaker.list=Speaker List
+speaker.new=New Speaker
+speaker.show=Show Speaker
+speaker.created=Speaker {0} created
+speaker.updated=Speaker {0} updated
+speaker.deleted=Speaker {0} deleted
+speaker.not.found=Speaker not found with id {0}
+speaker.id=Id
+speaker.name=Name
+speaker.bio=Bio
+speaker.blog=Blog
+speaker.email=Email
+speaker.publicEmail=Public Email
+speaker.talks=Talks
+
+# Talk messages
+talk.create=Create Talk
+talk.edit=Edit Talk
+talk.list=Talk List
+talk.new=New Talk
+talk.show=Show Talk
+talk.created=Talk {0} created
+talk.updated=Talk {0} updated
+talk.deleted=Talk {0} deleted
+talk.not.found=Talk not found with id {0}
+talk.id=Id
+talk.event=Event
+talk.title=Title
+talk.summary=Summary
+talk.startDate=Start Date
+talk.endDate=End Date
+talk.location=Location
+talk.speakers=Speakers
