--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -1,5 +1,5 @@
 home=Inicio
-create=Nuevo
+create=Crear
 edit=Modificar
 update=Actualizar
 delete=Borrar
@@ -23,3 +23,40 @@ event.endTime=Fecha de termino
 event.allDay=Todo el día
 event.location=Ubicación
 event.necessaryRegistry=Registro necesario
+
+# Speaker messages
+speaker.create=Nuevo Orador
+speaker.edit=Modificar Orador
+speaker.list=Todos los Oradores
+speaker.new=Nuevo Orador
+speaker.show=Mostrar Orador
+speaker.created=Orador {0} creado
+speaker.updated=Orador {0} actualizado
+speaker.deleted=Orador {0} borrado
+speaker.not.found=Orador no encontrado con id {0}
+speaker.id=Id
+speaker.name=Nombre completo
+speaker.bio=Biografia
+speaker.blog=Blog
+speaker.email=Email
+speaker.publicEmail=Publicar Email
+speaker.talks=Charlas
+
+# Talk messages
+talk.create=Nueva Charla
+talk.edit=Modificar Charla
+talk.list=Todas las Charlas
+talk.new=Nueva Charla
+talk.show=Mostrar Charla
+talk.created=Charla {0} creada
+talk.updated=Charla {0} actualizada
+talk.deleted=Charla {0} borrada
+talk.not.found=Charla no encontrada con id {0}
+talk.id=Id
+talk.event=Evento
+talk.title=Titulo
+talk.summary=Resumen
+talk.startDate=Fecha de Inicio
+talk.endDate=Fecha de Termino
+talk.location=Ubicación
+talk.speakers=Oradores
