improvements to domain class Talk

--- a/grails-app/i18n/i18n-templates.properties
+++ b/grails-app/i18n/i18n-templates.properties
@@ -4,6 +4,8 @@ edit=Edit
 update=Update
 delete=Delete
 delete.confirm=Are you sure?
+yes=Yes
+no=No
 
 # Event messages
 event.create=Create Event
@@ -60,3 +62,4 @@ talk.startDate=Start Date
 talk.endDate=End Date
 talk.location=Location
 talk.speakers=Speakers
+talk..necessaryRegistry=Necessary Registry
