--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -4,6 +4,8 @@ edit=Modificar
 update=Actualizar
 delete=Borrar
 delete.confirm=¿Estas seguro?
+yes=Si
+no=No
 
 
 event.create=Nuevo Evento
@@ -60,3 +62,4 @@ talk.startDate=Fecha de Inicio
 talk.endDate=Fecha de Termino
 talk.location=Ubicación
 talk.speakers=Oradores
+talk..necessaryRegistry=Registro necesario
