--- a/grails-app/i18n/i18n-templates.properties
+++ b/grails-app/i18n/i18n-templates.properties
@@ -62,4 +62,4 @@ talk.startDate=Start Date
 talk.endDate=End Date
 talk.location=Location
 talk.speakers=Speakers
-talk..necessaryRegistry=Necessary Registry
+talk.necessaryRegistry=Necessary Registry
