--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -62,4 +62,4 @@ talk.startDate=Fecha de Inicio
 talk.endDate=Fecha de Termino
 talk.location=Ubicación
 talk.speakers=Oradores
-talk..necessaryRegistry=Registro necesario
+talk.necessaryRegistry=Registro necesario
