improvements to user register

--- a/grails-app/i18n/i18n-templates.properties
+++ b/grails-app/i18n/i18n-templates.properties
@@ -63,3 +63,30 @@ talk.endDate=End Date
 talk.location=Location
 talk.speakers=Speakers
 talk.necessaryRegistry=Necessary Registry
+
+# Person messages
+person.create=Create Person
+person.edit=Edit Person
+person.list=Person List
+person.new=New Person
+person.show=Show Person
+person.created=Person {0} created
+person.updated=Person {0} updated
+person.deleted=Person {0} deleted
+person.not.found=Person not found with id {0}
+person.id=Id
+person.username=Username
+person.username.unique=El nombre de usuario proporcionado ya existe registrado
+person.userRealName=User Real Name
+person.company=Company
+person.passwd=Passwd
+person.confirmPassword=Confirm Password
+person.email=Email
+person.email.unique=El correo ya existe registrado
+person.description=Description
+person.blog=Blog
+person.enabled=Enabled
+person.authorities=Authorities
+person.emailShow=Email Show
+person.pass=Pass
+person.enterCode=Enter Code
