--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -63,3 +63,30 @@ talk.endDate=Fecha de Termino
 talk.location=Ubicación
 talk.speakers=Oradores
 talk.necessaryRegistry=Registro necesario
+
+# Person messages
+person.create=Nuevo Usuario
+person.edit=Modificar Usuario
+person.list=Lista de Usuarios
+person.new=Nuevo Usuario
+person.show=Mostrar Usuario
+person.created=Usuario {0} creado
+person.updated=Usuario {0} actualizado
+person.deleted=Usuario {0} borrado
+person.not.found=No se encontro al usuario con el id {0}
+person.id=Id
+person.username=Nombre de Usuario
+person.username.unique=El nombre de usuario proporcionado ya esta registrado
+person.userRealName=Nombre Completo
+person.company=Empresa
+person.passwd=Contraseña
+person.confirmPassword=Confirmar Contraseña
+person.email=Email
+person.email.unique=El correo ya esta registrado
+person.description=Descripcion
+person.blog=Blog
+person.enabled=Habilitado
+person.authorities=Roles
+person.emailShow=Mostrar Email
+person.pass=Contraseña
+person.enterCode=Introduce el codigo
