improvements to domain classes and layouts

--- a/grails-app/i18n/i18n-templates.properties
+++ b/grails-app/i18n/i18n-templates.properties
@@ -61,8 +61,10 @@ talk.summary=Summary
 talk.startDate=Start Date
 talk.endDate=End Date
 talk.location=Location
-talk.speakers=Speakers
 talk.necessaryRegistry=Necessary Registry
+talk.capacity=Capacity
+talk.displayCapacity=Display Capacity
+talk.speakers=Speakers
 
 # Person messages
 person.create=Create Person
