--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -61,8 +61,10 @@ talk.summary=Resumen
 talk.startDate=Fecha de Inicio
 talk.endDate=Fecha de Termino
 talk.location=Ubicación
-talk.speakers=Oradores
 talk.necessaryRegistry=Registro necesario
+talk.capacity=Capacidad
+talk.displayCapacity=Mostrar Capacidad
+talk.speakers=Oradores
 
 # Person messages
 person.create=Nuevo Usuario
