Nuevos mensajes en español para el registro y los eventos

--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -12,7 +12,7 @@ event.create=Nuevo Evento
 event.edit=Modificar Evento
 event.list=Todos los Eventos
 event.new=Nuevo Evento
-event.show=Mostrar Evento
+event.show=Información General del Evento
 event.created=Evento {0} creado
 event.updated=Evento {0} actualizado
 event.deleted=Evento {0} borrado
@@ -25,6 +25,8 @@ event.endTime=Fecha de termino
 event.allDay=Todo el día
 event.location=Ubicación
 event.necessaryRegistry=Registro necesario
+event.currents=Eventos Vigentes
+event.register=Registrase a este Evento
 
 # Speaker messages
 speaker.create=Nuevo Orador
@@ -67,7 +69,7 @@ talk.displayCapacity=Mostrar Capacidad
 talk.speakers=Oradores
 
 # Person messages
-person.create=Nuevo Usuario
+person.create=Nuevo Registro de Usuario
 person.edit=Modificar Usuario
 person.list=Lista de Usuarios
 person.new=Nuevo Usuario
@@ -92,3 +94,10 @@ person.authorities=Roles
 person.emailShow=Mostrar Email
 person.pass=Contraseña
 person.enterCode=Introduce el codigo
+
+#Menu messages
+signin=Registrarse
+login=Tu Cuenta
+logout=Salir
+welcome=Bienvenido
+guest=Invitado
