--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -96,8 +96,9 @@ person.pass=Contraseña
 person.enterCode=Introduce el codigo
 
 #Menu messages
-signin=Registrarse
+signin=Crear Cuenta
 login=Tu Cuenta
 logout=Salir
 welcome=Bienvenido
 guest=Invitado
+signinOrLogin=Debes crear una cuenta o iniciar sesión para poder registrarte
