--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -26,7 +26,8 @@ event.allDay=Todo el día
 event.location=Ubicación
 event.necessaryRegistry=Registro necesario
 event.currents=Eventos Vigentes
-event.register=Registrase a este Evento
+event.register=Registrese a este Evento
+event.talks=Charlas del evento
 
 # Speaker messages
 speaker.create=Nuevo Orador
@@ -67,6 +68,7 @@ talk.necessaryRegistry=Registro necesario
 talk.capacity=Capacidad
 talk.displayCapacity=Mostrar Capacidad
 talk.speakers=Oradores
+talks.choose=Escoge la(s) charla(s) a la(s) que deseas asistir
 
 # Person messages
 person.create=Nuevo Registro de Usuario
