mensajes para seguridad

--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -104,3 +104,10 @@ logout=Salir
 welcome=Bienvenido
 guest=Invitado
 signinOrLogin=Debes crear una cuenta o iniciar sesión para poder registrarte
+
+#Authorization messages
+auth.welcome=Accede a tu cuenta
+auth.loginId=ID de usuario
+auth.password=Contraseña
+auth.rememberMe=Recordarme
+auth.login=Entrar
