add some messages in talks

--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -26,6 +26,7 @@ event.allDay=Todo el día
 event.location=Ubicación
 event.necessaryRegistry=Registro necesario
 event.currents=Eventos Vigentes
+event.my=Mis Eventos
 event.register=Registrese a este Evento
 event.talks=Charlas del evento
 
@@ -69,6 +70,10 @@ talk.capacity=Capacidad
 talk.displayCapacity=Mostrar Capacidad
 talk.speakers=Oradores
 talks.choose=Escoge la(s) charla(s) a la(s) que deseas asistir
+talks.attendee=Charlas que asistir
+talk.attendee=Atender
+talks.pendingToAttend=Charlas pendientes por atender
+talks.speaker=Charlas por realizar
 
 # Person messages
 person.create=Nuevo Registro de Usuario
