new messages in i18n...

--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -109,6 +109,7 @@ logout=Salir
 welcome=Bienvenido
 guest=Invitado
 signinOrLogin=Debes crear una cuenta o iniciar sesión para poder registrarte
+viewProfile=Ver Perfil
 
 #Authorization messages
 auth.welcome=Accede a tu cuenta
@@ -116,3 +117,4 @@ auth.loginId=ID de usuario
 auth.password=Contraseña
 auth.rememberMe=Recordarme
 auth.login=Entrar
+auth.editUser=Modificar datos del Usuario
