new message to user info

--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -80,7 +80,7 @@ person.create=Nuevo Registro de Usuario
 person.edit=Modificar Usuario
 person.list=Lista de Usuarios
 person.new=Nuevo Usuario
-person.show=Mostrar Usuario
+person.show=Datos del usuario
 person.created=Usuario {0} creado
 person.updated=Usuario {0} actualizado
 person.deleted=Usuario {0} borrado
