--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -83,6 +83,7 @@ person.new=Nuevo Usuario
 person.show=Datos del usuario
 person.created=Usuario {0} creado
 person.updated=Usuario {0} actualizado
+person.info.updated=Usuario: {0} actualizado :D !!!
 person.deleted=Usuario {0} borrado
 person.not.found=No se encontro al usuario con el id {0}
 person.id=Id
@@ -118,3 +119,6 @@ auth.password=Contraseña
 auth.rememberMe=Recordarme
 auth.login=Entrar
 auth.editUser=Modificar datos del Usuario
+
+#Register messages
+register.ready=Ya estás registrado, ahora ya puedes unirte a un evento :D
