--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -95,7 +95,7 @@ person.passwd=Contraseña
 person.confirmPassword=Confirmar Contraseña
 person.email=Email
 person.email.unique=El correo ya esta registrado
-person.description=Descripcion
+person.description=Acerca de ti
 person.blog=Blog
 person.enabled=Habilitado
 person.authorities=Roles
