--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -28,7 +28,9 @@ event.necessaryRegistry=Registro necesario
 event.currents=Eventos Vigentes
 event.my=Mis Eventos
 event.register=Registrese a este Evento
+event.register.confirm=Confirmar mi registro al evento
 event.talks=Charlas del evento
+
 
 # Speaker messages
 speaker.create=Nuevo Orador
