--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -9,6 +9,7 @@ no=No
 
 
 event.create=Nuevo Evento
+event.createdBy=Evento creado por
 event.edit=Modificar Evento
 event.list=Todos los Eventos
 event.new=Nuevo Evento
