new messages to person and recovery pass

--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -95,9 +95,13 @@ person.username.unique=El nombre de usuario proporcionado ya esta registrado
 person.userRealName=Nombre Completo
 person.company=Empresa
 person.passwd=Contraseña
+person.passwd.forgot=Olvidaste tu contraseña...
+person.passwd.sendit=Se ha enviado una nueva contraseña al email proporcionado...
 person.confirmPassword=Confirmar Contraseña
 person.email=Email
+person.email.provide=Por favor escribe la dirección de correo que usaste para registrarte...
 person.email.unique=El correo ya esta registrado
+person.email.notFound=La dirección de email proporcionada no esta relacionado con ningún usuario...
 person.description=Acerca de ti
 person.blog=Blog
 person.enabled=Habilitado
@@ -114,6 +118,7 @@ welcome=Bienvenido
 guest=Invitado
 signinOrLogin=Debes crear una cuenta o iniciar sesión para poder registrarte
 viewProfile=Ver Perfil
+recovery=Recuperar
 
 #Authorization messages
 auth.welcome=Accede a tu cuenta
