fix for http://code.google.com/p/coetus/issues/detail?id=36

--- a/grails-app/i18n/i18n-templates_es.properties
+++ b/grails-app/i18n/i18n-templates_es.properties
@@ -130,3 +130,4 @@ auth.editUser=Modificar datos del Usuario
 
 #Register messages
 register.ready=Ya estás registrado, ahora ya puedes unirte a un evento :D
+not.geolocation=No es una geolocalización valida {2}
